# RiSuto

./: Cargo.toml  LICENSE.md  README.md
anirisuto/: Cargo.toml
anirisuto-gql/: Cargo.toml
anirisuto-gql/graphql/: schema.graphql  test.graphql
anirisuto-gql/src/: lib.rs
anirisuto/src/: main.rs
