[package]
name = "anirisuto"
version = "0.0.1"
edition.workspace = true
authors.workspace = true

[dependencies]
crossterm = "0.26"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.20", features = ["full"] }
tui = { version = "0.19", features = ["serde"] }
unicode-width = "0.1"
